tests/ui/proc-macro/bad-projection.stderr
error[E0277]: the trait bound `(): Project` is not satisfied
  --> $DIR/bad-projection.rs:14:17
   |
LL | pub fn uwu() -> <() as Project>::Assoc {}
   |                 ^^^^^^^^^^^^^^^^^^^^^^ the trait `Project` is not implemented for `()`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/bad-projection.rs:9:1
   |
LL | trait Project {
   | ^^^^^^^^^^^^^

error[E0277]: the trait bound `(): Project` is not satisfied
  --> $DIR/bad-projection.rs:14:17
   |
LL | pub fn uwu() -> <() as Project>::Assoc {}
   |                 ^^^^^^^^^^^^^^^^^^^^^^ the trait `Project` is not implemented for `()`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/bad-projection.rs:9:1
   |
LL | trait Project {
   | ^^^^^^^^^^^^^
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0593]: function is expected to take 1 argument, but it takes 0 arguments
  --> $DIR/bad-projection.rs:14:1
   |
LL | pub fn uwu() -> <() as Project>::Assoc {}
   | --------------------------------------^^^
   | |
   | expected function that takes 1 argument
   | takes 0 arguments
   | required by a bound introduced by this call
   |
note: required by a bound in `ProcMacro::bang`
  --> $SRC_DIR/proc_macro/src/bridge/client.rs:LL:COL

error[E0277]: the trait bound `(): Project` is not satisfied
  --> $DIR/bad-projection.rs:14:1
   |
LL | pub fn uwu() -> <() as Project>::Assoc {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Project` is not implemented for `()`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/bad-projection.rs:9:1
   |
LL | trait Project {
   | ^^^^^^^^^^^^^

error[E0277]: the trait bound `(): Project` is not satisfied
  --> $DIR/bad-projection.rs:14:1
   |
LL | pub fn uwu() -> <() as Project>::Assoc {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Project` is not implemented for `()`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/bad-projection.rs:9:1
   |
LL | trait Project {
   | ^^^^^^^^^^^^^

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0277, E0593.
For more information about an error, try `rustc --explain E0277`.
